--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </tr>
     <tr>
       <td>Image of Planet</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
+      <td><img src="images/earth.jpg" alt="?"></td>
+      <td><img src="images/moon.jpg" alt="?"></td>
+      <td><img src="images/mars.jpg" alt="?"></td>
+      <td><img src="images/jupiter.jpg" alt="?"></td>
     </tr>
     <tr>
       <td>Mass (10^24kg)</td>
