--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <td>Image of Planet</td>
       <td><img src="images/earth.jpg" alt="?"></td>
       <td><img src="images/moon.jpg" alt="?"></td>
-      <td><img src="images/mars.jpg" alt="?"></td>
+      <td><img src="images/mars.png" alt="?"></td>
       <td><img src="images/jupiter.jpg" alt="?"></td>
     </tr>
     <tr>
